Adding weather information and refactoring css file

--- a/index.html
+++ b/index.html
@@ -26,11 +26,15 @@
           <input
             id="input-field"
             type="text"
-            placeholder="Type a country name..."
+            placeholder="Search for a country..."
           />
           <button type="submit">Search</button>
         </search>
-        <section id="card-box"></section>
+        <section id="card-box" class="cards"></section>
+        <section class="arrows">
+          <img src="./assets/arrow-left.svg" alt="arrow-left" class="arrow" />
+          <img src="./assets/arrow-right.svg" alt="arrow-right" class="arrow" />
+        </section>
       </div>
     </main>
     <script src="./main.js" type="module" />
