Finish redesign of application

--- a/index.html
+++ b/index.html
@@ -32,8 +32,18 @@
         </search>
         <section id="card-box" class="cards"></section>
         <section class="arrows">
-          <img src="./assets/arrow-left.svg" alt="arrow-left" class="arrow" />
-          <img src="./assets/arrow-right.svg" alt="arrow-right" class="arrow" />
+          <img
+            src="./assets/arrow-left.svg"
+            alt="arrow-left"
+            class="arrow"
+            id="left-arrow"
+          />
+          <img
+            src="./assets/arrow-right.svg"
+            alt="arrow-right"
+            class="arrow"
+            id="right-arrow"
+          />
         </section>
       </div>
     </main>
