Saas implementation finished

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
           />
           <button type="submit">Search</button>
         </search>
-        <section id="card-box" class="cards"></section>
+        <section id="card-box" class="cards">
+          <h2 class="no-country-text">No country to be displayed</h2>
+        </section>
         <section class="arrows">
           <img
             src="./assets/arrow-left.svg"
