Finishing responsive layout

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <body>
     <header>
       <h1>Country for search</h1>
+      <img
+        src="./assets/menu.svg"
+        alt="menu-icon"
+        class="menu-icon"
+        id="menu-icon"
+      />
     </header>
     <main>
       <aside class="sidebar">
@@ -49,6 +55,6 @@
         </section>
       </div>
     </main>
-    <script src="./main.js" type="module" />
+    <script src="./main.js" type="module"></script>
   </body>
 </html>
